--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple http server built from scratch",
   "main": "sHTTP.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon sHTTP.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "dependencies": {
     "buffer": "^6.0.3",
     "net": "^1.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
